custom.css
.lnr {
    display: inline-block;
    fill: currentColor;
    width: 1em;
    height: 1em;
    vertical-align: -0.05em;
    stroke-width: 2;
}

.lnr-cart {
    width: 1.5em;
    height: 1.5em;
}

.lnr-magnifier {
    color: #000000;   
}

.navbar-nav li {
    margin-right: 3em;

}

.navbar {
    background-color: #edb04e;
}

.img-fluid {
    max-width: 80%;
    height: auto
}

section {
    margin-top: 40px;
}

.h {
    text-align: center;
}

.card-body {
    align-content: center;
}

footer {
    margin-top: 60px;
    padding: 5em;
}

.carousel-inner > .item > img, .carousel-inner > .item > a > img {
    width: 100%;
}

.meie {
    text-align: center;
}

